Runtime errors fixed

--- a/gsmws/bts.py.save.2
+++ b/gsmws/bts.py.save.2
@@ -171,8 +171,7 @@ class BTS(object):
 
         # Need to generate a mapping of ARFCNs : IPs
         fake_neighbors = {}
-        # set 5 IPs  len(arfcns)
-        for i in range(0, 5):
+        for i in range(0, 5)#len(arfcns))  :
             chan = arfcns[i]
             fake_neighbors[chan] = "127.0.10.%d:16001" % (i + 10,)
 
